--- a/_config.yml
+++ b/_config.yml
@@ -2,3 +2,6 @@ title: Maîtresse Alison
 description: Continuité pédagogique - 2020
 baseurl: /
 markdown: kramdown
+favicon:
+  source: favicon.png
+  path: /
