--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,6 @@
 title: Maîtresse Alison
 description: Continuité pédagogique - 2020
+name: Maîtresse Alison - Continuité pédagogique - 2020
+author: Maîtresse Alison
 baseurl: /
 markdown: kramdown
