Update base url

--- a/_config.yml
+++ b/_config.yml
@@ -2,5 +2,5 @@ title: Maîtresse Alison
 description: Continuité pédagogique - 2020
 name: Maîtresse Alison - Continuité pédagogique - 2020
 author: Maîtresse Alison
-baseurl: https://dorianbayart.github.io/continuite-pedagogique/
+baseurl: /continuite-pedagogique/
 markdown: kramdown
